# IPCV09---Working-with-point-clouds

./: README.md  requirements.txt
01 - RGB-D to point cloud/: TODO.md  advanced_depth2cloud.py  simple_depth2cloud.py
02 - Visualizing Point Clouds/: TODO.md  abe_model.pcd
02 - Visualizing Point Clouds/O3DViewer/: o3d_viewer.py  o3d_viewpoint.json  renderoption.json
02 - Visualizing Point Clouds/PCLViewer/: CMakeLists.txt  README.md  defines.hpp  pclviewer.cpp
02 - Visualizing Point Clouds/PCLViewer/libs/: cxxopts.hpp
03 - ROI filter/: TODO.md  crop.ply  crop_box.py
04 - Table segmentation/: TODO.md
05 - PointNet implementation/: PointNet_example.ipynb  TODO.md  pointnet_hand_gesture_example-pl.ipynb
